# video_file_duration

./: README.md  pyproject.toml  requirements.txt  run.bat  video_duration.py
